--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "solc": "^0.4.13",
     "style-loader": "^0.18.2",
     "truffle-contract": "2.0.5",
-    "web3": "^0.20.1"
+    "web3": "0.20.1"
   }
 }
