--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack": "^3.3.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "ethereumjs-testrpc": "4.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
